--- a/views/postagem/index.handlebars
+++ b/views/postagem/index.handlebars
@@ -4,7 +4,9 @@
       <hr>
       <small>Data da publicação: {{postagem.data}}</small>
       <hr>
-      <p>{{postagem.conteudo}}</p>
+      <p>{{{postagem.conteudo}}}</p>
+      {{!-- original meu código --}}
+      {{!-- <p>{{postagem.conteudo}}</p> --}}
       <a href="/" class="btn btn-primary mt-4" type="submit">Voltar</a>
   </div>
 </div>
